SERVER-76547 Make time-series collection creation idempotent