src/mongo/db/commands/create_command.cpp
@@ -67,6 +67,7 @@
 #include "mongo/db/service_context.h"
 #include "mongo/db/timeseries/timeseries_constants.h"
 #include "mongo/db/timeseries/timeseries_gen.h"
+#include "mongo/db/timeseries/timeseries_options.h"
 #include "mongo/db/views/view.h"
 #include "mongo/logv2/log.h"
 #include "mongo/logv2/log_component.h"
@@ -184,6 +185,58 @@ void checkCollectionOptions(OperationContext* opCtx,
                                 << " already exists, but with collation: "
                                 << defaultCollatorSpecBSON << " rather than " << options.collation);
     }
+}
+
+void checkTimeseriesBucketsCollectionOptions(OperationContext* opCtx,
+                                             const Status& error,
+                                             const NamespaceString& bucketsNs,
+                                             CollectionOptions& options) {
+    auto coll = acquireCollectionMaybeLockFree(
+        opCtx,
+        CollectionAcquisitionRequest::fromOpCtx(
+            opCtx, bucketsNs, AcquisitionPrerequisites::OperationType::kRead));
+    uassert(error.code(), error.reason(), coll.exists());
+
+    auto existingOptions = coll.getCollectionPtr()->getCollectionOptions();
+    uassert(error.code(), error.reason(), existingOptions.timeseries);
+
+    uassertStatusOK(timeseries::validateAndSetBucketingParameters(*options.timeseries));
+
+    // When checking that the options for the buckets collection are the same, filter out the
+    // options that were internally generated upon time-series collection creation (i.e. were not
+    // specified by the user).
+    uassert(error.code(),
+            error.reason(),
+            options.matchesStorageOptions(
+                uassertStatusOK(CollectionOptions::parse(existingOptions.toBSON(
+                    false /* includeUUID */, timeseries::kAllowedCollectionCreationOptions))),
+                CollatorFactoryInterface::get(opCtx->getServiceContext())));
+}
+
+void checkTimeseriesViewOptions(OperationContext* opCtx,
+                                const Status& error,
+                                const NamespaceString& viewNs,
+                                const CollectionOptions& options) {
+    auto acquisition =
+        acquireCollectionOrViewMaybeLockFree(opCtx,
+                                             CollectionOrViewAcquisitionRequest::fromOpCtx(
+                                                 opCtx,
+                                                 viewNs,
+                                                 AcquisitionPrerequisites::OperationType::kRead,
+                                                 AcquisitionPrerequisites::ViewMode::kCanBeView));
+    uassert(error.code(), error.reason(), acquisition.isView());
+    const auto& view = acquisition.getView().getViewDefinition();
+
+    uassert(error.code(), error.reason(), view.viewOn() == viewNs.makeTimeseriesBucketsNamespace());
+    uassert(error.code(),
+            error.reason(),
+            CollatorInterface::collatorsMatch(
+                view.defaultCollator(),
+                !options.collation.isEmpty()
+                    ? uassertStatusOK(CollatorFactoryInterface::get(opCtx->getServiceContext())
+                                          ->makeFromBSON(options.collation))
+                          .get()
+                    : nullptr));
 }
 
 class CmdCreate final : public CreateCmdVersion1Gen<CmdCreate> {
@@ -450,10 +503,17 @@ public:
             // if a collection with identical options already exists.
             if (createStatus == ErrorCodes::NamespaceExists &&
                 !opCtx->inMultiDocumentTransaction()) {
-                checkCollectionOptions(opCtx,
-                                       createStatus,
-                                       cmd.getNamespace(),
-                                       CollectionOptions::fromCreateCommand(cmd));
+                auto options = CollectionOptions::fromCreateCommand(cmd);
+                if (options.timeseries) {
+                    checkTimeseriesBucketsCollectionOptions(
+                        opCtx,
+                        createStatus,
+                        cmd.getNamespace().makeTimeseriesBucketsNamespace(),
+                        options);
+                    checkTimeseriesViewOptions(opCtx, createStatus, cmd.getNamespace(), options);
+                } else {
+                    checkCollectionOptions(opCtx, createStatus, cmd.getNamespace(), options);
+                }
             } else {
                 uassertStatusOK(createStatus);
             }
